tempchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-f
  namespace: helm
spec:
  selector:
    app: portal-f
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
